[package]
name = "bevy_transform_gizmo"
version = "0.1.0"
authors = ["Aevyrie Roessler <aevyrie@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {  version = "0.5", default-features = false }
bevy_mod_picking = { path = "../bevy_mod_picking"}
bevy_mod_raycast = { path = "../bevy_mod_raycast" }

[dev-dependencies]
bevy = { version = "0.5", default-features = false, features = [
    "render",
] }
